compiler/tests/fail/subarrays/x86-64/bla2.jazz
export fn main () -> reg u64 {
  reg ptr u64[1] r;
  reg u64 res;

  res = r[0];
  return res;
}
